@@ -1,3 +1,10 @@
+2013-01-17  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module.cc,
+	  modules/pandora_module.h,
+	  modules/pandora_module_factory.cc,
+	  modules/pandora_module_regexp.cc: Added support for log modules.
+
 2012-12-12  Ramon Novoa  <rnovoa@artica.es>
 
 	* modules/pandora_module_logevent.cc: Changed the flags of
